--- a/microservice_benutzungsstunden/requirements.txt
+++ b/microservice_benutzungsstunden/requirements.txt
@@ -3,6 +3,7 @@ Django==4.2.2
 django-extensions==3.2.3
 django-filter==24.2
 numpy==1.26.4
+openpyxl==3.1.2
 pandas==2.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
